scrollbar fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.no-scrollbar::-webkit-scrollbar {
+.no-scrollbar {
   scrollbar-width: none;
+  overflow: -moz-scrollbars-none;
+}
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 body {
